# testtrivy

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: trivy-scan.yml
